Try a top-down approach
We make PS effectively the entry-point to the program.
It takes the `htmlFunction`s and invokes them.
The rest of the program should work the same.

There is a bit of glue code with this approach.
Due to how FFI files work and require paths,
we take the PS output and the JS sources,
and massage the interfaces together.

As we need more JS modules in PS,
this glue module should be the place to add them.
When we take-over more functionality in PS,
this glue module shouldn't have to change.

--- a/GUI/Makefile
+++ b/GUI/Makefile
@@ -34,8 +34,8 @@ clean:
 	  output \
 	  pcbdata.json
 
-index.js: $(JS_DEPS)/.stamp $(JS_SRCS) pcbdata.json
-	$(BROWSERIFY) src/htmlFunctions.js --debug --outfile $@
+index.js: $(JS_DEPS)/.stamp $(JS_SRCS) output/Main/index.js pcbdata.json
+	$(BROWSERIFY) src/main.js --debug --outfile $@
 
 output/Main/index.js: $(JS_DEPS)/.stamp $(PURS_DEPS)/.stamp $(PURS_SRCS)
 	$(PULP) build
