--- a/GUI/bower.json
+++ b/GUI/bower.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "purescript-prelude": "^4.1.0",
     "purescript-console": "^4.1.0",
-    "purescript-effect": "^2.0.0"
+    "purescript-effect": "^2.0.0",
+    "purescript-web-events": "^1.0.0",
+    "purescript-web-html": "^1.1.1"
   },
   "devDependencies": {
     "purescript-psci-support": "^4.0.0"
