Try a bottom-up approach
In this scenario, JS is calling out to PS.
It seems much simpler to go this way, and in some sense, it's easier.
But, we also carefully chose a very easily translatable function.

It might get harder when we start dealing with global mutable state.
But so long as we're doing things that are pure,
or that only affect the DOM, it will probably work out okay.

In any case, we try to make the PS look similar to the JS
so it's a bit easier to see what's similar.
We use `Fn1` instead of `(->)` since that's more descriptive.
`Fn1` is a synonym for `(->)`,
but it starts a pattern of using uncurried functions for JS interop.

--- a/GUI/Makefile
+++ b/GUI/Makefile
@@ -21,7 +21,7 @@ $(PURS_DEPS)/.stamp: $(JS_DEPS)/.stamp bower.json
 	touch $@
 
 .PHONY: build
-build: output/Main/index.js
+build: output/Render/index.js
 
 clean:
 	rm -fr \
@@ -34,10 +34,10 @@ clean:
 	  output \
 	  pcbdata.json
 
-index.js: $(JS_DEPS)/.stamp $(JS_SRCS) pcbdata.json
+index.js: $(JS_DEPS)/.stamp $(JS_SRCS) output/Render/index.js pcbdata.json
 	$(BROWSERIFY) src/htmlFunctions.js --debug --outfile $@
 
-output/Main/index.js: $(JS_DEPS)/.stamp $(PURS_DEPS)/.stamp $(PURS_SRCS)
+output/Render/index.js: $(JS_DEPS)/.stamp $(PURS_DEPS)/.stamp $(PURS_SRCS)
 	$(PULP) build
 
 pcbdata.json: ../Examples/Eagle/Arduino_MEGA2560_ref/pcbdata.json
