--- a/GUI/bower.json
+++ b/GUI/bower.json
@@ -11,7 +11,9 @@
     "purescript-console": "^4.1.0",
     "purescript-effect": "^2.0.0",
     "purescript-math": "^2.1.1",
-    "purescript-functions": "^4.0.0"
+    "purescript-functions": "^4.0.0",
+    "purescript-maybe": "^4.0.0",
+    "purescript-arrays": "^5.1.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^4.0.0"
