--- a/GUI/bower.json
+++ b/GUI/bower.json
@@ -13,7 +13,12 @@
     "purescript-math": "^2.1.1",
     "purescript-functions": "^4.0.0",
     "purescript-maybe": "^4.0.0",
-    "purescript-arrays": "^5.1.0"
+    "purescript-arrays": "^5.1.0",
+    "purescript-canvas": "^4.0.0",
+    "purescript-strings": "^4.0.0",
+    "purescript-ordered-collections": "^1.1.0",
+    "purescript-refs": "^4.1.0",
+    "purescript-transformers": "^4.1.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^4.0.0"
